# SupplyGenie

./: .gitignore  LICENSE  README.md
supplygenie-metamorphs-idealize-ai-service-main/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
supplygenie-metamorphs-idealize-ai-service-main/.claude/: settings.local.json
supplygenie-metamorphs-idealize-ai-service-main/archive/: .serverlessignore  init.py  main.py  package-lock.json  package.json  requirements copy.txt  requirements.txt  serverless.yml
supplygenie-metamorphs-idealize-ai-service-main/notebooks/: supply_chain_agentic_flow.ipynb
supplygenie-metamorphs-idealize-ai-service-main/src/: agents.py  config.py  main.py  models.py  prompts.py  tools.py  utils.py
supplygenie-metamorphs-idealize-frontend/: package-lock.json  package.json
supplygenie-metamorphs-idealize-frontend/app/: layout.tsx  page.tsx
supplygenie-metamorphs-idealize-frontend/app/api/chats/: route.ts
supplygenie-metamorphs-idealize-frontend/app/chat/: page.tsx
supplygenie-metamorphs-idealize-frontend/app/login/: page.tsx
supplygenie-metamorphs-idealize-frontend/app/signup/: page.tsx
supplygenie-metamorphs-idealize-frontend/components/: chat-page.tsx  home-page.tsx  login-page.tsx  signup-page.tsx
supplygenie-metamorphs-idealize-frontend/components/ui/: button.tsx  sidebar.tsx
supplygenie-metamorphs-idealize-frontend/hooks/: useSpeechToText.ts
supplygenie-metamorphs-idealize-frontend/lib/: firebase.ts  mongodb.ts  supply-chain-api.ts
supplygenie-metamorphs-idealize-frontend/styles/: globals.css
(+1 files in other folders)
